Fixed slideshow height, Mailchimp radio button alignment, and Max's placeholder image

--- a/app/ui/global.css
+++ b/app/ui/global.css
@@ -230,7 +230,7 @@ a[href="jobs"]:visited {
 #slideshow {
   position: absolute;
   top: 15dvh;
-  height: 50dvh;
+  height: 15rem;
   overflow-y: hidden;
   z-index: 0;
 }
